--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <h1>JavaScript Material Review Examples</h1>
-  <h1>10 minute break until 17:05</h1>
+  <h1>Szia Livi Édesem!</h1>
+  <h1>Dobj egy Like-ot... úgyse müködik!.. hihi</h1>
   <h2>Subtitle</h2>
   <h3>Number of likes: <span>13</span></h3>
   <button>LIKE</button>
