--- a/index.html
+++ b/index.html
@@ -3,8 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Shall it be the First Nightmare on the web...
-  </title>
+  <title>Shall it be the First Nightmare on the web...</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
